Add educational disclaimer as per GitHub requirements

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 <body>
     <div class="main">
         <nav>
-            <span><img width="63px" src="assests/logo.svg" alt=""></span>
+            <span><object data="assests/p" type=""></object></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In</button>
             </div>
         </nav>
+        <div class="disclaimer" style="background-color: #000; color: #fff; padding: 15px; text-align: center; font-size: 16px; margin: 10px 0;">
+            <strong>DISCLAIMER:</strong> THIS PAGE WAS MADE AS A PERSONAL EDUCATIONAL PROJECT. This is NOT the official site of Netflix. The creator of this page is NOT affiliated with Netflix in any way. This page is a personal project made in connection with an educational exercise.
+        </div>
         <br>
         <div class="box">
         </div>
